        - new module: AnyEvent::Log, for simple logging needs.
        - new env variable, PERL_ANYEVENT_LOG, for fine-grained logging config.
        - new env variable, PERL_ANYEVENT_DEBUG_SHELL, to automatically start
          a debug shell.
        - new env variable, PERL_ANYEVENT_DEBUG_WRAP, to automatically enable
          watcher instrumentation/wrapping (see AnyEvent::Debug::wrap).
        - an empty PERL_ANYEVENT_RESOLV_CONF now selects the default
          configuration.
        - env variables can now be specified using AE_xyz instead of
          PERL_ANYEVENT_xyz, subject to some rules.
        - lots of new AnyEvent::Debug functionality.
        - AnyEvent::Strict now checks for modifications $_ by the callback
          (by setting it to readonly while executing the callback, if possible).
        - IO::Async sometimes cancels the wrong timer when you call cancel_timer.
          Invest extra overhead to work around this peculiar behaviour.
        - split the pure perl backend into a loop module and an impl
          module (AnyEvent::Loop and AnyEvent::Impl::Perl).
        - some read types (regex, netstring, json, storable) could
          errornously keep an AE::Handle object alive on their own
          (reported by Mohammad Toossi).
        - add more workarounds around child watcher bugs in IO::Async
          and (newly introduced) in POE.
        - use glib child watchers and try to work around its limitations,
          if possible (based on a patch by Kevin Ryde).
	- add support for FLTK (fltk2), via AnyEvent::Impl::FLTK2.
        - many read types in AnyEvent::Handle would malfunction during
          transitions to TLS because of a "delete $self->{rbuf}".
          (reported by Gerald Galster).
        - improve condvar blocking wait performance (probably only noticable
          with faster backends), also make it easier for event loops that
          do not support blocking waits.