@@ -611,6 +611,12 @@ used as-is. If you know that the service name is not in your services
 database, then you can specify the service in the format C<name=port>
 (e.g. C<http=80>).
 
+Hostnames will be looked up in F</etc/hosts> (or the file specified
+via C<< $ENV{PERL_ANYEVENT_HOSTS} >>). If they are found, the entries
+there will be used instead of querying DNS (SRV records will still be
+queried). The effect is as if entries from F</etc/hosts> would replace any
+existing C<A> and C<AAAA> records for the given host name and aliases.
+
 For UNIX domain sockets, C<$node> must be the string C<unix/> and
 C<$service> must be the absolute pathname of the socket. In this case,
 C<$proto> will be ignored.
@@ -639,6 +645,44 @@ Example:
    resolve_sockaddr "google.com", "http", 0, undef, undef, sub { ... };
 
 =cut
+
+our %HOSTS;
+our $HOSTS;
+
+if (
+   open my $fh, "<",
+      length $ENV{PERL_ANYEVENT_HOSTS} ? $ENV{PERL_ANYEVENT_HOSTS}
+      : AnyEvent::WIN32                ? "$ENV{SystemRoot}/system32/drivers/etc/hosts"
+      :                                  "/etc/hosts"
+) {
+   local $/;
+   binmode $fh;
+   $HOSTS = <$fh>;
+} else {
+   $HOSTS = "";
+}
+
+sub _parse_hosts() {
+   #%HOSTS = ();
+
+   for (split /\n/, $HOSTS) {
+      s/#.*$//;
+      s/^[ \t]+//;
+
+      my ($addr, @aliases) = split /[ \t]+/;
+      next unless @aliases;
+
+      if (my $ip = parse_ipv4 $addr) {
+         push @{ $HOSTS{$_}[0] }, $ip
+            for @aliases;
+      } elsif (my $ip = parse_ipv6 $addr) {
+         push @{ $HOSTS{$_}[1] }, $ip
+            for @aliases;
+      }
+   }
+
+   undef $HOSTS;
+}
 
 sub resolve_sockaddr($$$$$$) {
    my ($node, $service, $proto, $family, $type, $cb) = @_;
@@ -711,13 +755,25 @@ sub resolve_sockaddr($$$$$$) {
                push @res, [$idx, "ipv6", [AF_INET6, $type, $proton,
                            pack_sockaddr $port, $noden]]
             }
+         } elsif (my $hosts = $HOSTS{$node}) {
+            # hosts
+            if (exists $HOSTS{$node}) {
+               push @res,
+                  map [$idx, "ipv4", [AF_INET , $type, $proton, pack_sockaddr $port, $_]],
+                     @{ $hosts->[0] }
+                  if $family != 6;
+
+               push @res,
+                  map [$idx, "ipv6", [AF_INET6, $type, $proton, pack_sockaddr $port, $_]],
+                     @{ $hosts->[1] }
+                  if $family != 4;
+            }
          } else {
             # ipv4
             if ($family != 6) {
                $cv->begin;
                AnyEvent::DNS::a $node, sub {
-                  push @res, [$idx, "ipv4", [AF_INET, $type, $proton,
-                              pack_sockaddr $port, parse_ipv4 $_]]
+                  push @res, [$idx, "ipv4", [AF_INET , $type, $proton, pack_sockaddr $port, parse_ipv4 $_]]
                      for @_;
                   $cv->end;
                };
@@ -727,8 +783,7 @@ sub resolve_sockaddr($$$$$$) {
             if ($family != 4) {
                $cv->begin;
                AnyEvent::DNS::aaaa $node, sub {
-                  push @res, [$idx, "ipv6", [AF_INET6, $type, $proton,
-                              pack_sockaddr $port, parse_ipv6 $_]]
+                  push @res, [$idx, "ipv6", [AF_INET6, $type, $proton, pack_sockaddr $port, parse_ipv6 $_]]
                      for @_;
                   $cv->end;
                };
@@ -740,6 +795,12 @@ sub resolve_sockaddr($$$$$$) {
 
    $node = AnyEvent::Util::idn_to_ascii $node
       if $node =~ /[^\x00-\x7f]/;
+
+   # parse hosts
+   if (defined $HOSTS) {
+      _parse_hosts;
+      undef &_parse_hosts;
+   }
 
    # try srv records, if applicable
    if ($node eq "localhost") {
